# lfm-cmd

./: Cargo.toml  README.md  README_ja.md  Tuning.md  build.rs  configuration.json
sample-input/: 吾輩は猫である.txt  坊っちゃん.txt
src/: chunker.rs  cli.rs  config.rs  main.rs  prompts.rs  reducer.rs  test_compile.rs  types.rs  worker.rs
