[package]
name = "lfm-cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-channel = "0.5.12"
encoding_rs = "0.8.35"
llama-cpp-2 = { version = "0.1.135", features = ["metal"] }
llama-cpp-sys-2 = "0.1.135"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
strip = true
lto = true
codegen-units = 1
